// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/page-header/demo/actions.md correctly 1`] = `
<div
  class="ant-pageheader have-footer"
>
  <div
    class="ant-pageheader-back-icon"
  >
    <i
      class="anticon anticon-arrow-left"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="arrow-left"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 0 0 0 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </i>
  </div>
  <div
    class="ant-divider ant-divider-vertical"
  />
  <div
    class="ant-pageheader-title-view"
  >
    <span
      class="ant-pageheader-title"
    >
      页面标题
    </span>
    <span
      class="ant-pageheader-sub-title"
    >
      解释一下标题
    </span>
    <span
      class="ant-pageheader-tags"
    >
      <div
        class="ant-tag ant-tag-red"
      >
        警告
      </div>
    </span>
    <span
      class="ant-pageheader-extra"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          次操作
        </span>
      </button>
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          次操作
        </span>
      </button>
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          主操作
        </span>
      </button>
    </span>
  </div>
  <div
    class="ant-pageheader-content-view"
  >
    <div
      class="wrap"
    >
      <div
        class="content padding"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col-12"
          >
            <div
              class="description"
            >
              <div
                class="term"
              >
                创建人
              </div>
              <div
                class="detail"
              >
                曲丽丽
              </div>
            </div>
          </div>
          <div
            class="ant-col-12"
          >
            <div
              class="description"
            >
              <div
                class="term"
              >
                关联单据
              </div>
              <div
                class="detail"
              >
                <a>
                  421421
                </a>
              </div>
            </div>
          </div>
          <div
            class="ant-col-12"
          >
            <div
              class="description"
            >
              <div
                class="term"
              >
                创建时间
              </div>
              <div
                class="detail"
              >
                2017-01-10
              </div>
            </div>
          </div>
          <div
            class="ant-col-12"
          >
            <div
              class="description"
            >
              <div
                class="term"
              >
                生效日期
              </div>
              <div
                class="detail"
              >
                2017-10-10
              </div>
            </div>
          </div>
          <div
            class="ant-col-12"
          >
            <div
              class="description"
            >
              <div
                class="term"
              >
                单据备注
              </div>
              <div
                class="detail"
              >
                浙江省杭州市西湖区工专路
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="extraContent"
      >
        <div
          class="ant-row"
        >
          <div
            class="ant-col-12"
          >
            <span
              class="label"
            >
              状态
            </span>
            <p
              class="detail"
            >
              待审批
            </p>
          </div>
          <div
            class="ant-col-12"
          >
            <span
              class="label"
            >
               订单价格
            </span>
            <p
              class="detail"
            >
              ¥ 568.08
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pageheader-footer"
  >
    <div
      class="ant-tabs ant-tabs-top ant-tabs-line"
    >
      <div
        class="ant-tabs-bar ant-tabs-top-bar"
        role="tablist"
        tabindex="0"
      >
        <div
          class="ant-tabs-nav-container"
        >
          <span
            class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
            unselectable="unselectable"
          >
            <span
              class="ant-tabs-tab-prev-icon"
            >
              <i
                class="anticon anticon-left ant-tabs-tab-prev-icon-target"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="left"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </i>
            </span>
          </span>
          <span
            class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
            unselectable="unselectable"
          >
            <span
              class="ant-tabs-tab-next-icon"
            >
              <i
                class="anticon anticon-right ant-tabs-tab-next-icon-target"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="right"
                  fill="currentColor"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"
                  />
                </svg>
              </i>
            </span>
          </span>
          <div
            class="ant-tabs-nav-wrap"
          >
            <div
              class="ant-tabs-nav-scroll"
            >
              <div
                class="ant-tabs-nav ant-tabs-nav-animated"
              >
                <div>
                  <div
                    aria-disabled="false"
                    aria-selected="true"
                    class="ant-tabs-tab-active ant-tabs-tab"
                    role="tab"
                  >
                    详情
                  </div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class=" ant-tabs-tab"
                    role="tab"
                  >
                    规则
                  </div>
                </div>
                <div
                  class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden"
        tabindex="0"
      />
      <div
        class="ant-tabs-content ant-tabs-content-animated ant-tabs-top-content"
        style="margin-left:0%"
      >
        <div
          aria-hidden="false"
          class="ant-tabs-tabpane ant-tabs-tabpane-active"
          role="tabpanel"
        >
          <div
            role="presentation"
            style="width:0;height:0;overflow:hidden"
            tabindex="0"
          />
          <div
            role="presentation"
            style="width:0;height:0;overflow:hidden"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
          role="tabpanel"
        />
      </div>
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/basic.md correctly 1`] = `
<div
  class="ant-pageheader"
>
  <div
    class="ant-pageheader-back-icon"
  >
    <i
      class="anticon anticon-arrow-left"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="arrow-left"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 0 0 0 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </i>
  </div>
  <div
    class="ant-divider ant-divider-vertical"
  />
  <div
    class="ant-pageheader-title-view"
  >
    <span
      class="ant-pageheader-title"
    >
      页面标题
    </span>
    <span
      class="ant-pageheader-sub-title"
    >
      解释一下标题
    </span>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/breadcrumb.md correctly 1`] = `
<div
  class="ant-pageheader"
>
  <div
    class="ant-breadcrumb"
  >
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <a
          href="#/index"
        >
          一级菜单
        </a>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <a
          href="#/index/first"
        >
          二级菜单
        </a>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <span>
          三级菜单
        </span>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>
  <div
    class="ant-pageheader-title-view"
  >
    <span
      class="ant-pageheader-title"
    >
      页面标题
    </span>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/content.md correctly 1`] = `
<div
  class="ant-pageheader"
>
  <div
    class="ant-breadcrumb"
  >
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <a
          href="#/index"
        >
          一级菜单
        </a>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <a
          href="#/index/first"
        >
          二级菜单
        </a>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="ant-breadcrumb-link"
      >
        <span>
          三级菜单
        </span>
      </span>
      <span
        class="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>
  <div
    class="ant-pageheader-title-view"
  >
    <span
      class="ant-pageheader-title"
    >
      页面标题
    </span>
  </div>
  <div
    class="ant-pageheader-content-view"
  >
    <div
      class="wrap"
    >
      <div
        class="content"
      >
        <div
          class="content"
        >
          <p>
            段落示意：蚂蚁金服务设计平台 ant.design，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </p>
          <p
            class="contentLink"
          >
            <a>
              <img
                alt="start"
                src="https://gw.alipayobjects.com/zos/rmsportal/MjEImQtenlyueSmVEfUD.svg"
              />
              快速开始
            </a>
            <a>
              <img
                alt="info"
                src="https://gw.alipayobjects.com/zos/rmsportal/NbuDUAuBlIApFuDvWiND.svg"
              />
              产品简介
            </a>
            <a>
              <img
                alt="doc"
                src="https://gw.alipayobjects.com/zos/rmsportal/ohOEPSYdDTNnyMbGuyLb.svg"
              />
              产品文档
            </a>
          </p>
        </div>
      </div>
      <div
        class="extraContent"
      >
        <img
          alt="content"
          src="https://gw.alipayobjects.com/mdn/mpaas_user/afts/img/A*KsfVQbuLRlYAAAAAAAAAAABjAQAAAQ/original"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/tags.md correctly 1`] = `
<div
  class="ant-pageheader"
>
  <div
    class="ant-pageheader-back-icon"
  >
    <i
      class="anticon anticon-arrow-left"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="arrow-left"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 0 0 0 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </i>
  </div>
  <div
    class="ant-divider ant-divider-vertical"
  />
  <div
    class="ant-pageheader-title-view"
  >
    <span
      class="ant-pageheader-title"
    >
      页面标题
    </span>
    <span
      class="ant-pageheader-tags"
    >
      <div
        class="ant-tag ant-tag-red"
      >
        警告
      </div>
    </span>
  </div>
</div>
`;
